Graph Rewrite for _arg and _retval works. Fix issue with tensor overwrite

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SRC
     TestBuilder.cpp
     TestUtilities.cpp
     TestCaseBuilder.cpp
+    TestTF.cpp
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
