Designing a simple class for unit test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -43,6 +43,8 @@ set(SRC
     TestUtilities.cpp
     TestCaseBuilder.cpp
     TestTF.cpp
+    TestSimple.cpp
+    TestCaseBuilderSimple.cpp
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
